# isaivazhi

./: .gitignore  AGENTS.md  AGENTS_1.md  BUILD_NOTES.md  LICENSE  PLAY_SECRETS.md  README.md  ai_recommendation_and_queue_plan.md  build commands.txt  build.gradle.kts  build_steps.txt  capacitor.config.json  capasitor_legacy.md  colab_embedding_generator.py  discover_startup_delay_diagnosis.md  gradle.properties  index.html  local_embedding_generator.py  merge_local_embeddings.py  package-lock.json  package.json  playwright.config.mjs  privacy-policy.html  project_development.md  project_development_archive.md  project_development_status.md  settings.gradle.kts  style.css  troubleshooting_signal_capture.md  vite.config.js  vitest.config.mjs
app/: build.gradle.kts  proguard-rules.pro
docs/: ONNX_MODEL_RELEASE.md  architecture.md  cursor-cloud-setup.md  makulu-layout-fix.md
gradle/: libs.versions.toml
native/app/src/main/cpp/: CMakeLists.txt  embedding_native.cpp
scripts/: fetch_onnx_assets.ps1  fetch_onnx_assets.sh
src/: activity-log.js  app-ai-page.js  app-art.js  app-back-navigation.js  app-browse-render.js  app-debug.js  app-discover-ui.js  app-player-ui.js  app-playlists-ui.js  app-settings.js  app-song-menu.js  app-status-ui.js  app-taste-ui.js  app.js  embedding-cache.js  embedding-db.js  engine-analytics.js  engine-data.js  engine-embeddings.js  engine-favorites.js  engine-indexes.js  engine-insights.js  engine-playback.js  engine-session-ui.js  engine-state.js  engine-taste.js  engine.js  gpu-recommender.js  logger.js  music-bridge.js  recommender.js
(+236 files in other folders)
